[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tracer"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.98"
ctor = "0.4.2"
qemu-plugin = { workspace = true, features = [
    "unix-weak-link",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.45.1", features = ["full"] }
typed-builder = "0.21.0"
yaxpeax-x86 = "2.0.0"

# Dependencies only used by this crate's `tracer` binary. We do not use dev-dependencies
# because they cannot be optional.
clap = { version = "4.5.39", features = ["derive", "string"] }
memfd-exec = { version = "0.2.1", optional = true }
rand = "0.9.1"
serde_json = "1.0.140"

[features]
default = ["plugin-api-v4"]
plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
plugin-api-v4 = ["qemu-plugin/plugin-api-v4"]
